# SSScoring

./: .gitignore  .vimrc  08-40-06.CSV  CLAUDE.md  CONTRIBUTORS.md  Claude-starter-prompt.md  DZ-locations-normalizer.ipynb  DumbDriver.applescript  Jochen-SSScoring-comparison.ipynb  LICENSE  LICENSE.txt  Makefile  Makefile.win  Makefile.x86  README-1ST.ipynb  README.md  SSScore-Intel_app.spec  SSScore-Windows.spec  SSScore_app.py  SSScore_app.spec  Untitled.ipynb  Windows-gack.md  _env-SAMPLE  app.py  basics.ipynb  buggy-Bokeh.py  builduniversal  chirps.py  common.mk  config.toml  conversation-starter-prompt.md  debugging-harness.py  dev-requirements.txt  docker-compose.yaml  driver.py  dzresource  experiments.ipynb  falling-back-diagnostics.md  hooks.py  installer.iss  (+34 more)
.claude/: settings.local.json
.config/pudb/: pudb.cfg  saved-breakpoints-3.11
.github/ISSUE_TEMPLATE/: general.md  report-missing-dz.md
app/: app.py
assets/: SSScoring.graffle
docker/: Dockerfile  Makefile  README.MD  build.mk  config.toml  dockerimagename.txt
docker-ARM/: Dockerfile  Makefile  dockerimagename.txt
docker/ARM/: Dockerfile  Makefile  config.toml  docker-compose.yaml  speedskydiving_app.dns
docs/: index.html  search.js  ssscoring.html
docs/ssscoring/: app.html  appcommon.html  apps.html  calc.html  cli.html  constants.html  datatypes.html  dzdir.html  errors.html  flysight.html  fs1.html  mapview.html  notebook-Bokeh.html  notebook-SOLV_R.html  notebook.html  resources.html  ssscoremoved.html  ssscoremultiple.html  ssscoresingle.html
docs/ssscoring/apps/: common.html  ssscoremultiple.html  ssscoresingle.html
legacy/: notes-odds-and-ends.ipynb  proto-app-00-single-jump.ipynb  proto-app-02-bulk-processing.ipynb  proto-app-03-bulk-processor.ipynb  proto-app-04-bulk-processor.ipynb  requirements-2_4_6-Streamlit-1.45.0-fix.txt  speed-skydiving-analysis-2019-rules.ipynb  ssscoremoved.py  ssscoresingle.py
legacy/_jupyter/: jupyter_notebook_config.json  migrated
legacy/_jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace  lab-a511.jupyterlab-workspace
legacy/data-sources/: test.csv
legacy/data-sources/ciurana/: 16-35-32.CSV  17-46-49.CSV  18-12-08.CSV  19-26-07.CSV  20-21-18.CSV  22-11-15.CSV  23-17-11.CSV
legacy/data-sources/landgren/: 12-19-30.CSV  12-45-20.CSV
legacy/ssscore/: __init__.py  elevations.py
manpages/: ssscore.1  ssscoring.1  ssscoring.3
resources/: 2026-ISC-Competition-Rules-Speed-Skydiving.md  Aria-Notation-2_0.md  Aria-Notation-2_1.md  DumbDriver.icns  FreeAgent.icns  README.rtf  Reventlou.icns  drop-zones-loc-elev-raw.csv  drop-zones-loc-elev-raw_csv-BAD.org  drop-zones-loc-elev.csv  entitlements.plist  falling-back-diagnostics.md  test-data-01.CSV  test-data.CSV
resources/Jochen-Nik-samples-202408/: 14-23-36-Nik.CSV
resources/quickstart-example/: R1_09-20-26.CSV  R2_11-00-34.csv  R4_09-20-26-unsupported-SMD.CSV
resources/quickstart-example/R3_13-32-20/: EVENT.CSV  TRACK.CSV
resources/test-data-FS2/01-00-00/: BAD_CSV_FILE.CSV  SENSOR.CSV
resources/test-tracks/FS1/: test-data-02.CSV  test-data-03.CSV  test-data-04-DOS-CRLF.CSV  test-data-05-warm-up.CSV  test-data-06-exceeds-max-alt.CSV  test-data-07-BAD-ISC.CSV
resources/test-tracks/FS2/: test-data-08-stratosphere.CSV
resources/test-tracks/INSIGHT/: gps_00104.csv  gps_00105.csv  gps_00106.csv  gps_00112.csv
scoring/: cumdata-variation-detectin.ipynb  notes-2023.txt  notes-odds-and-ends.ipynb  speed-skydiving-analysis-2019-rules.ipynb  speed-skydiving-analysis-DEPRECATED.ipynb  speed-skydiving-analysis.ipynb  tb-test.ipynb  test.py
scoring/ssscore/: __init__.py  elevations.py
ssscoring/: __init__.py  app.py  appcommon.py  calc.py  cli.py  constants.py  datatypes.py  dzdir.py  errors.py  flysight.py  fs1.py  mapview.py  notebook-Bokeh.py  notebook-SOLV_R.py  notebook.py  ssscoremultiple.py  ssscoresingle.py
ssscoring/apps/: __init__.py  common.py  ssscoregmultiple.py  ssscoremultiple.py  ssscoresingle.py
ssscoring/resources/: __init__.py  config.toml  drop-zones-loc-elev.csv  instructions.md  moved-2-new-domain.md
tests/: test_app.py  test_appcommon.py  test_calc.py  test_cli.py  test_datatypes.py  test_dzdir.py  test_errors.py  test_flysight.py  test_fs1.py  test_mapview.py  test_notebook.py  test_ssscoremultiple.py  test_ssscoresingle.py  test_ssscoring.py
tests/apps/: test_common.py
tools/: NoSMART.applescript  calculate-sphere.py  chirps.html  dzresource  noksmart  nospot  top-10.ipynb  umountFlySight
(+2 files in other folders)
