# See: https://github.com/pr3d4t0r/SSScoring/blob/master/LICENSE.txt

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"


[metadata]
url = "https://github.com/pr3d4t0r/ssscoring"


[project]
authors = [
    {name = "Eugene Ciurana pr3d4t0r", email = "ssscoring.project@cime.net" }
]
classifiers = [
    "Intended Audience :: Other Audience",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
description = "ssscoring - Speed Skydiving scoring tools"
dynamic = [
    "dependencies",
]
license = { text = 'BSD-3-Clause' }
name = "ssscoring"  # $(PACKAGE) and package.txt
readme = "README.md"
requires-python = ">=3.9.9"
version = '1.3.0'


[project.scripts]
ssscoring = "ssscoring:_main"


[tool.pytest.ini_options]
addopts = "-sv"
testpaths = [
    "tests"
]


[tool.setuptools]
include-package-data = true
packages = [
    "ssscoring",
    # "tests", # because test modules import objects from other test modules
]


[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

