# See: https://github.com/pr3d4t0r/SSScoring/blob/master/LICENSE.txt

[build-system]
requires = [
    'devpi',
    'numpy',
    'pandas',
    'pytest',
    'pytest-cov',
    'setuptools>=61.0',
]
build-backend = 'setuptools.build_meta'


[metadata]
url = 'https://github.com/pr3d4t0r/ssscoring'


[project]
authors = [
    {name = 'Eugene Ciurana pr3d4t0r', email = 'ssscoring.project@cime.net' }
]
classifiers = [
    'Intended Audience :: Other Audience',
    'Operating System :: MacOS',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]
description = 'ssscoring - Speed Skydiving scoring tools'
dynamic = [
    'dependencies',
]
license = 'BSD-3-Clause'
name = 'ssscoring'  # $(PACKAGE) and package.txt
readme = 'README.md'
requires-python = '>=3.9.9'
version = '2.8.6'


[project.scripts]
ssscore = 'ssscoring.cli:_ssscoreCommand'


[tool.pytest.ini_options]
addopts = '-sv -p no:warnings -rm --cov="ssscoring" --cov-report=html'
testpaths = [
    'tests',
]
pythonpath = [
    '.',
]


[tool.setuptools]
include-package-data = true
packages = [
    'ssscoring',
    'ssscoring.resources'
]


[tool.setuptools.dynamic]
dependencies = { file = 'requirements.txt' }


[tool.setuptools.package-data]
ssscoring = [
    'resources/drop-zones-loc-elev.csv',
    'resources/instructions.md',
]

